# audio-graph

./: README.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  README.md  RELEASE.md  SYSTEM_TRAY_WIDGET_PROPOSAL.md
docs/audit/: docs-queue.md
docs/designs/: provider-architecture.md
docs/reviews/: audio-graph-review-loop17.md  audio-graph-review-loop19.md  audio-graph-review-loop20.md  audio-graph-review-loop22.md  audio-graph-review-loop23.md  audio-graph-wave-a-review.md  audio-graph-wave-b-review.md  gap-analysis.md
scripts/: bump-version.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/src/: commands.rs  events.rs  lib.rs  state.rs
src-tauri/src/asr/: assemblyai.rs  aws_transcribe.rs  cloud.rs  deepgram.rs  mod.rs  sherpa_streaming.rs
src-tauri/src/audio/: capture.rs
src-tauri/src/credentials/: mod.rs
src-tauri/src/fs_util/: mod.rs
src-tauri/src/gemini/: mod.rs
src-tauri/src/graph/: entities.rs  extraction.rs  mod.rs  temporal.rs
src-tauri/src/llm/: engine.rs  mistralrs_engine.rs  mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/persistence/: io.rs  mod.rs
src-tauri/src/sessions/: mod.rs  usage.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/speech/: mod.rs
src/components/: AsrProviderSettings.tsx  AudioSettings.tsx  AudioSourceSelector.tsx  ChatSidebar.tsx  ControlBar.tsx  CredentialsManager.tsx  ExpressSetup.test.tsx  ExpressSetup.tsx  GeminiSettings.tsx  KnowledgeGraphViewer.tsx  LiveTranscript.tsx  LlmProviderSettings.tsx  PipelineStatusBar.tsx  SessionsBrowser.tsx  SettingsPage.tsx  ShortcutsHelpModal.tsx  SpeakerPanel.tsx  StorageBanner.test.tsx  StorageBanner.tsx  Toast.test.tsx  Toast.tsx  TokenUsagePanel.test.tsx  TokenUsagePanel.tsx  settingsTypes.ts
src/hooks/: useFocusTrap.test.ts  useFocusTrap.ts  useKeyboardShortcuts.test.ts  useTauriEvents.test.ts  useTauriEvents.ts
src/i18n/locales/: en.json  pt.json
src/store/: index.ts
src/types/: index.ts
src/utils/: download.ts
