[package]
name = "audio-graph"
version = "0.1.0"
description = "AudioGraph — Real-time audio capture to knowledge graph"
authors = ["rsac contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

# GPU acceleration features (opt-in).
# Default build is CPU-only. Enable one of these for GPU-accelerated
# Whisper ASR and llama.cpp LLM inference on Windows/Linux.
# macOS Metal acceleration is always enabled (see platform-specific deps below).
[features]
default = []
cuda = [
    "whisper-rs/cuda",
    "llama-cpp-2/cuda",
] # NVIDIA GPUs (requires CUDA Toolkit)
vulkan = [
    "whisper-rs/vulkan",
    "llama-cpp-2/vulkan",
] # Cross-vendor GPUs (requires Vulkan SDK)

# Audio capture (rsac library from GitHub)
# Platform-conditional: each OS pulls in only its own backend feature.
[target.'cfg(target_os = "linux")'.dependencies]
rsac = { git = "https://github.com/baladithyab/rust-crossplat-audio-capture.git", features = ["feat_linux"], branch = "main" }

[target.'cfg(target_os = "windows")'.dependencies]
rsac = { git = "https://github.com/baladithyab/rust-crossplat-audio-capture.git", features = ["feat_windows"], branch = "main" }

[target.'cfg(target_os = "macos")'.dependencies]
rsac = { git = "https://github.com/baladithyab/rust-crossplat-audio-capture.git", features = ["feat_macos"], branch = "main" }
# Enable Metal GPU acceleration on macOS for Whisper ASR and llama.cpp LLM inference.
# Both crates detect Apple Metal via their build.rs, but the feature flag must be
# opted-in explicitly to link the Metal framework and compile the GPU kernels.
whisper-rs = { version = "0.16.0", features = ["metal"] }
llama-cpp-2 = { version = "0.1.139", features = ["metal"] }

[dependencies]
# Tauri framework
tauri = { version = "2.10.3", features = ["devtools"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Async runtime
tokio = { version = "1.50.0", features = ["full"] }

# Concurrency
crossbeam-channel = "0.5.15"

# Graph data structure
petgraph = "0.8.3"

# Logging
log = "0.4.29"
env_logger = "0.11.9"

# Audio processing
rubato = "1.0"
audioadapter-buffers = "2.0"

# String similarity (entity resolution)
strsim = "0.11.1"

# Process enumeration (cross-platform)
sysinfo = "0.38.4"

# UUID generation
uuid = { version = "1.22.0", features = ["v4"] }

# Configuration — toml + dirs removed (unused); see TODO(I6) in state.rs

# Voice Activity Detection
voice_activity_detector = "0.2.1"

# Speech recognition (needed by subtask 2)
whisper-rs = "0.16.0"

# Entity extraction (rule-based)
regex = "1"

# HTTP client for model downloads (json feature retained for future OpenAI-compatible API support)
reqwest = { version = "0.13.2", features = ["blocking", "json"] }

# Native LLM inference (llama.cpp bindings)
llama-cpp-2 = "0.1.139"
encoding_rs = "0.8"

# Future dependencies (commented out — will be added when implementing)
# ndarray = "0.16"
