[package]
name = "audio-graph"
version = "0.1.0"
description = "AudioGraph — Real-time audio capture to knowledge graph"
authors = ["rsac contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

# GPU acceleration features (opt-in).
# Default build is CPU-only. Enable one of these for GPU-accelerated
# Whisper ASR and llama.cpp LLM inference on Windows/Linux.
# macOS Metal acceleration is always enabled (see platform-specific deps below).
[features]
default = []
cuda = [
    "whisper-rs/cuda",
    "llama-cpp-2/cuda",
] # NVIDIA GPUs (requires CUDA Toolkit)
vulkan = [
    "whisper-rs/vulkan",
    "llama-cpp-2/vulkan",
] # Cross-vendor GPUs (requires Vulkan SDK)
# Streaming speaker diarization (Sortformer ONNX via parakeet-rs).
diarization = ["dep:parakeet-rs"]
# Streaming ASR via sherpa-onnx (Zipformer transducer).
# Optional to avoid ONNX Runtime linker conflicts with parakeet-rs.
sherpa-streaming = ["dep:sherpa-onnx"]

# Audio capture (rsac library)
# Uses path dep for local development (rsac is the parent repo).
# For standalone builds, switch to the git dep:
#   rsac = { git = "https://github.com/Codeseys-Labs/rust-crossplat-audio-capture.git", tag = "v0.1.0", features = [...] }
[target.'cfg(target_os = "linux")'.dependencies]
rsac = { path = "../../../", features = ["feat_linux"] }

[target.'cfg(target_os = "windows")'.dependencies]
rsac = { path = "../../../", features = ["feat_windows"] }

[target.'cfg(target_os = "macos")'.dependencies]
rsac = { path = "../../../", features = ["feat_macos"] }
# Enable Metal GPU acceleration on macOS for Whisper ASR and llama.cpp LLM inference.
# Both crates detect Apple Metal via their build.rs, but the feature flag must be
# opted-in explicitly to link the Metal framework and compile the GPU kernels.
whisper-rs = { version = "0.16.0", features = ["metal"] }
llama-cpp-2 = { version = "0.1.139", features = ["metal"] }

[dependencies]
# Tauri framework
tauri = { version = "2.10.3", features = ["devtools"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Async runtime
tokio = { version = "1.50.0", features = ["full"] }

# Concurrency
crossbeam-channel = "0.5.15"
rayon = "1.10"

# Graph data structure
petgraph = "0.8.3"

# Logging
log = "0.4.29"
env_logger = "0.11.9"

# Audio processing
rubato = "2.0"
audioadapter-buffers = "3.0"

# String similarity (entity resolution)
strsim = "0.11.1"

# Process enumeration (cross-platform)
sysinfo = "0.38.4"

# UUID generation
uuid = { version = "1.22.0", features = ["v4"] }

# Configuration — toml + dirs removed (unused); see TODO(I6) in state.rs

# Speech recognition (needed by subtask 2)
whisper-rs = "0.16.0"

# Entity extraction (rule-based)
regex = "1"

# HTTP client for model downloads + cloud ASR API (multipart for audio upload)
reqwest = { version = "0.13.2", features = ["blocking", "json", "multipart"] }

# Native LLM inference (llama.cpp bindings)
llama-cpp-2 = "0.1.139"
encoding_rs = "0.8"

# Rust-native LLM inference (mistral.rs on Candle)
# Metal GPU acceleration requires full Xcode (not just CLT) for the Metal shader
# compiler. Use default (CPU) features here; add platform-specific Metal feature
# in the [target.'cfg(target_os = "macos")'.dependencies] section when full Xcode
# is available. Set MISTRALRS_METAL_PRECOMPILE=0 to skip shader precompilation.
mistralrs = { version = "0.8" }

# JSON Schema derivation (used by mistral.rs structured generation)
# Must match the schemars version used by mistralrs (v1.x)
schemars = "1"

# Streaming speaker diarization (Sortformer ONNX via parakeet-rs)
parakeet-rs = { version = "0.3", features = [
    "sortformer",
], default-features = false, optional = true }

# Streaming ASR via sherpa-onnx (Zipformer transducer)
sherpa-onnx = { version = "1.12", optional = true }

# Gemini Live API (WebSocket)
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
base64 = "0.22"
futures-util = "0.3"
url = "2"

# AWS SDK (always compiled — users switch providers in-app)
aws-config = { version = "1.1", features = ["behavior-version-latest", "sso"] }
aws-sdk-transcribestreaming = "1.102"
aws-credential-types = "1"
aws-sdk-sts = "1.101"
aws-smithy-http = "0.63"
tokio-stream = "0.1"

# Google Cloud auth (Vertex AI)
gcp_auth = "0.12"

# YAML config (settings stored in ~/.config/audio-graph/)
serde_yaml = "0.9"

# Platform directories (~/.config, etc.)
dirs = "6"

# Memory zeroization for credentials
zeroize = { version = "1.8", features = ["derive", "serde"] }
